# camera-frame-grabber

./: CMakeLists.txt  README.md
scripts/: doit.sh
src/: frame-process.cpp  frame-process.hpp  graph-focus.cpp  graph-focus.h  main.cpp  plot.cpp  plot.hpp  test-plot.cpp  udp.c  udp.h  v4l-mmap.c  v4l-mmap.h  v4l-xface.c  web-server.c  web-server.h  webserver.c
